# knowledge-DEMO

./: .dockerignore  .gitignore  Agents.md  CLAUDE.md  DOCKER.md  Dockerfile  restart.sh
server/: .env.example  README.md  docker-compose.yml  pyproject.toml  requirements.txt
server/app/: celery_app.py  config.py  embeddings.py  json_utils.py  llm.py  main.py  reranker.py  schemas.py  security.py  sse.py  vector_store.py
server/app/db/: __init__.py  models.py  session.py
server/app/graphs/: _retrieval.py  assessment_graph.py  evaluation_graph.py  practice_graph.py  qa_graph.py  quiz_graph.py  suggestor_graph.py
server/app/ingestion/: __init__.py  chunker.py  cli.py  loaders.py  pipeline.py
server/app/kp_extraction/: __init__.py  enricher.py  extractor.py  kp_indexer.py
server/app/practice_role/: __init__.py  generator.py
server/app/routes/: admin_kb.py  assessment.py  assessment_admin.py  course.py  course_ai.py  course_assignment.py  dashboard.py  kp.py  learning.py  practice.py  practice_role.py  product.py  qa.py  quiz.py
server/data/: app.db
server/migrations/: env.py
server/migrations/versions/: 0001_init_kb_schema.py  0002_add_product.py  0003_product_experience_answer.py  0004_practice_role.py  0005_assessment.py  0006_kp_card_content.py  0007_course_assignment.py  0008_learning_loop.py  0009_kp_retrieval_enrich.py  0010_kp_retrieval_index_status.py  0011_product_cover_image.py
server/scripts/: entrypoint.sh  export_seed.py  relink_existing_kps.py  seed_pax_demo_course.py  seed_product_kp.py  seed_products.py  worker.sh
server/seed/: app.db
(+124 files in other folders)
