[project]
name = "simugo-server"
version = "0.1.0"
description = "SIMUGO LangGraph backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sse-starlette>=2.1",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "langgraph>=0.2.50",
    "langchain-openai>=0.2.10",
    "langchain-core>=0.3.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
