[project]
name = "simugo-server"
version = "0.1.0"
description = "SIMUGO LangGraph backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sse-starlette>=2.1",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "langgraph>=0.2.50",
    "langchain-openai>=0.2.10",
    "langchain-core>=0.3.20",
    # RAG / KB stack
    "pymilvus[milvus_lite]>=2.4.10",
    "sqlalchemy[asyncio]>=2.0.36",
    "aiosqlite>=0.20.0",
    "aiomysql>=0.2.0",
    "alembic>=1.13.3",
    "celery[redis]>=5.4.0",
    "python-pptx>=1.0.2",
    "pypdf>=5.0.0",
    "tiktoken>=0.8.0",
    "httpx>=0.27.0",
    "numpy>=1.26",
    "typer>=0.12.5",
    "python-multipart>=0.0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
